--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "^14.1.0",
-    "gray-matter": "^4.0.3",
     "next": "^14.1.0",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
