--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "remark-sandpack": "^0.0.3",
     "sharp": "^0.33.2",
     "typescript": "5.0.2"
   },
